# cavacore-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  flake.nix  justfile
examples/: simple.rs
nix/: package.nix
src/: audio_data.rs  bindings.rs  builder.rs  error.rs  init.rs  lib.rs  options.rs  setter.rs  wrapper.rs
src/example/: simple.rs
tests/: blueprint.rs
