[package]
name = "cavacore"
version = "0.1.0"
edition = "2021"
description = "A rust wrapper of cavacore from the cava music visualizer."
license = "MIT"
repository = "https://github.com/TornaxO7/cavacore-rs"
authors = ["TornaxO7 <tornax@pm.me>"]

[dependencies]
bounded-integer = { version = "0.5", features = ["types"] }
realfft = "3.4"
thiserror = "2.0"
